add history page and component

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -76,6 +76,17 @@ input:active {
   box-shadow: none !important;
 }
 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Para Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .bg-email-bg {
   background-image: url('/images/email-bg.webp');
   background-position: 50% 50%;
